# test-submodule

./: .gitignore  CMakeLists.txt  CMakeSettings.json
source/: CMakeLists.txt
source/lib/: CMakeLists.txt  lib.cpp  lib.h
source/test/: CMakeLists.txt  main.cpp
